Filter, search & styling.

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -12,7 +12,8 @@
 // to match your app's branding.
 // Tip: Use the "Theme Builder" on Quasar's documentation website.
 
-$primary   : #283593;
+// $primary   : #283593;
+$primary   : #4e342e;
 $secondary : #26A69A;
 $seco: #e8eaf6;
 $accent    : #9C27B0;
