Allow checking off steps. Show when the recipe is finished and the time it took.

--- a/src/css/quasar.variables.scss
+++ b/src/css/quasar.variables.scss
@@ -15,8 +15,9 @@
 // $primary   : #283593;
 $primary   : #4e342e;
 $secondary : #26A69A;
-$seco: #e8eaf6;
-$accent    : #9C27B0;
+$seco      : #e8eaf6;
+$accent    : #f57c00;
+$help-text : #ffd7c1;
 
 $dark      : #1D1D1D;
 
